--- a/Symber.Web.APQuery.Oracle/Symber.Web.APQuery.Oracle.nuspec
+++ b/Symber.Web.APQuery.Oracle/Symber.Web.APQuery.Oracle.nuspec
@@ -7,7 +7,7 @@
     <authors>$author$</authors>
     <owners>$author$</owners>
     <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
-    <projectUrl>http://apworks.org</projectUrl>
+    <projectUrl>https://github.com/leocaan/APQuery.net</projectUrl>
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
