--- a/Symber.Web.APQuery/Symber.Web.APQuery.nuspec
+++ b/Symber.Web.APQuery/Symber.Web.APQuery.nuspec
@@ -7,7 +7,7 @@
 		<authors>$author$</authors>
 		<owners>$author$</owners>
 		<licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
-		<projectUrl>http://apworks.org</projectUrl>
+		<projectUrl>https://github.com/leocaan/APQuery.net</projectUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>$description$</description>
 		<releaseNotes>First release.</releaseNotes>
