mini version change

--- a/Symber.Web.APQuery.Oracle/Symber.Web.APQuery.Oracle.nuspec
+++ b/Symber.Web.APQuery.Oracle/Symber.Web.APQuery.Oracle.nuspec
@@ -6,7 +6,7 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>$author$</owners>
-    <licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
+    <licenseUrl>https://github.com/leocaan/APQuery.net/blob/master/LICENSE.md</licenseUrl>
     <projectUrl>https://github.com/leocaan/APQuery.net</projectUrl>
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
