--- a/Symber.Web.APQuery/Symber.Web.APQuery.nuspec
+++ b/Symber.Web.APQuery/Symber.Web.APQuery.nuspec
@@ -6,7 +6,7 @@
 		<title>$title$</title>
 		<authors>$author$</authors>
 		<owners>$author$</owners>
-		<licenseUrl>http://www.apache.org/licenses/LICENSE-2.0.html</licenseUrl>
+		<licenseUrl>https://github.com/leocaan/APQuery.net/blob/master/LICENSE.md</licenseUrl>
 		<projectUrl>https://github.com/leocaan/APQuery.net</projectUrl>
 		<requireLicenseAcceptance>false</requireLicenseAcceptance>
 		<description>$description$</description>
