--- a/Symber.Web.APQuery.Oracle/Symber.Web.APQuery.Oracle.nuspec
+++ b/Symber.Web.APQuery.Oracle/Symber.Web.APQuery.Oracle.nuspec
@@ -11,7 +11,7 @@
     <!--<iconUrl>http://ICON_URL_HERE_OR_DELETE_THIS_LINE</iconUrl>-->
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>First release.</releaseNotes>
+    <releaseNotes>Add some extensions.</releaseNotes>
     <copyright>Copyright 2015</copyright>
     <tags>APQuery.net ORM Oracle</tags>
   </metadata>
